script/k8s/istio/1-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: fdc
  labels:
    istio-injection: enabled
