script/k8s/istio/3-virtualservice.yml
# Service auth
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fdc-auth
  namespace: fdc
spec:
  hosts:
  - "istio-hello-fdc.aegis.antrein.com"
  gateways:
  - fdc-gateway
  http:
  - route:
    - destination:
        host: hello.fdc.svc.cluster.local
        port:
          number: 80
---
# Service redirect
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fdc
  namespace: fdc
spec:
  hosts:
  - "istio-fdc.aegis.antrein.com"
  gateways:
  - fdc-gateway
  http:
  - route:
    - destination:
        host: fdc-svc.fdc.svc.cluster.local
        port:
          number: 80
